; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckJointCurvesSShaped.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckJointCurvesSShaped.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @CheckJointCurvesSShaped to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CheckJointCurvesSShaped() #0 {
  %1 = alloca double, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store double 3.200000e+00, double* %1, align 8
  %6 = call i32 (...) @DbgThread()
  %7 = call i32* @cmsBuildParametricToneCurve(i32 %6, i32 108, double* %1)
  store i32* %7, i32** %2, align 8
  %8 = call i32 (...) @DbgThread()
  %9 = load i32*, i32** %2, align 8
  %10 = call i32* @cmsReverseToneCurve(i32 %8, i32* %9)
  store i32* %10, i32** %3, align 8
  %11 = call i32 (...) @DbgThread()
  %12 = load i32*, i32** %2, align 8
  %13 = load i32*, i32** %2, align 8
  %14 = call i32* @cmsJoinToneCurve(i32 %11, i32* %12, i32* %13, i32 4096)
  store i32* %14, i32** %4, align 8
  %15 = call i32 (...) @DbgThread()
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @cmsFreeToneCurve(i32 %15, i32* %16)
  %18 = call i32 (...) @DbgThread()
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @cmsFreeToneCurve(i32 %18, i32* %19)
  %21 = call i32 (...) @DbgThread()
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @cmsIsToneCurveLinear(i32 %21, i32* %22)
  store i32 %23, i32* %5, align 4
  %24 = call i32 (...) @DbgThread()
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @cmsFreeToneCurve(i32 %24, i32* %25)
  %27 = load i32, i32* %5, align 4
  ret i32 %27
}

declare dso_local i32* @cmsBuildParametricToneCurve(i32, i32, double*) #1

declare dso_local i32 @DbgThread(...) #1

declare dso_local i32* @cmsReverseToneCurve(i32, i32*) #1

declare dso_local i32* @cmsJoinToneCurve(i32, i32*, i32*, i32) #1

declare dso_local i32 @cmsFreeToneCurve(i32, i32*) #1

declare dso_local i32 @cmsIsToneCurveLinear(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
